--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,34 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>PocketbookRails</title>
+  <title>Workspace</title>
+  <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="https://s3.amazonaws.com/codecademy-content/projects/bootstrap.min.css">
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
 
-<%= yield %>
+  <div class="header">
+    <div class="container">
+      <img class="logo" src="http://s3.amazonaws.com/codecademy-content/projects/pocketbook/logo.svg">
+      <div class="line-separator"></div>
+    </div>
+  </div>
+
+  <%= yield %>
+
+  <div class="footer">
+    <div class="container">
+      <ul class="nav">
+        <li class="<%= 'active' if params[:action] == 'signup' %>"><%= link_to "Sign Up", 'signup' %></li>
+        <li class="<%= 'active' if params[:action] == 'contact' %>"><%= link_to "Contact", 'contact' %></li>
+        <li class="<%= 'active' if params[:action] == 'help' %>"><%= link_to "Help", 'help' %></li>
+        <li class="<%= 'active' if params[:action] == 'about' %>"><%= link_to "About", 'about' %></li>
+      </ul>
+    </div>
+  </div>
 
 </body>
 </html>
